Kubernetes/Project/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - protocol:TCP
      port: 5432
      targetPort: 5432
